Fixes layout shift for swiper sliders by adding styles not uninitialized instances

--- a/scss/blocks/produktslider.scss
+++ b/scss/blocks/produktslider.scss
@@ -28,6 +28,15 @@
 		.swiper-wrapper {
 			overflow: visible !important;
 		}
+
+		// NOTE - Handle layout shift when slider is not initialized yet
+		&:not(.swiper-initialized) {
+			.swiper-slide {
+				width: calc((100% - 2 * 20px) / 3);
+				min-width: calc((100% - 2 * 20px) / 3);
+				margin-right: 20px;
+			}
+		}
 	}
 
 	.swiper-slide {
